MEC Production/MEC Production/src/objects/Product_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products Mapping</relationshipLabel>
        <relationshipName>Products_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Mapping</relationshipLabel>
        <relationshipName>Products_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>code__c</fullName>
        <label>Client Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Product Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>code__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProMap-{0000}</displayFormat>
        <label>Product Mapping Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>